force-app/main/default/objects/Reactivation__c/Reactivation__c.object-meta.xml
<CustomObject>
    <label>Reactivation</label>
    <nameField>
        <label>Reactivation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reactivations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>