force-app/main/default/objects/Reactivation__c/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Symptoms</fullName>
            </value>
            <value>
                <fullName>Treating Elsewhere</fullName>
            </value>
            <value>
                <fullName>Insurance Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>