force-app/main/default/objects/Reactivation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Reactivation Text Message Sent,Attempting To Contact,Scheduled,Disqualified</value>
    </filters>
    <label>All</label>
</ListView>