force-app/main/default/objects/Reactivation__c/listViews/My_Reactivations.listView-meta.xml
<ListView>
    <fullName>My_Reactivations</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Disqualified</value>
    </filters>
    <label>My Reactivations</label>
    <sharedTo>
        <role>Intake</role>
    </sharedTo>
</ListView>