force-app/main/default/objects/Reactivation__c/listViews/Reactivations_Reactivation.listView-meta.xml
<ListView>
    <fullName>Reactivations_Reactivation</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Queue</filterScope>
    <label>Reactivations</label>
    <queue>Reactivations</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>